--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-fastapi
-uvicorn
-sqlalchemy
-pydantic
-python-multipart
-async-exit-stack
-async-generator
+anyio==3.6.2
+async-exit-stack==1.0.1
+async-generator==1.10
+cffi==1.15.1
+click==8.1.3
+cryptography==39.0.1
+fastapi==0.92.0
+h11==0.14.0
+idna==3.4
+jose==1.0.0
+passlib==1.7.4
+pycparser==2.21
+pydantic==1.10.5
+PyJWT==2.6.0
+python-multipart==0.0.5
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.4
+starlette==0.25.0
+typing_extensions==4.5.0
+uvicorn==0.20.0
